--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Hello, World!</title>
+    <title>Cotação BTC</title>
+    <meta charset="utf-8">
+	<link rel="icon" href="./favicon.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Hello, World!</h1>
+<body class="text-light bg-dark">
+    <div class="container mt-3" style="width: 450px;">
+        <h2 class="text-center">Cotação BTC</h2>
+        <table class="table table-bordered text-light">
+            <thead>
+            <tr>
+                <th>Symbol</th>
+                <th>Name</th>
+                <th>Price $</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td id="symbol"></td>
+                <td id="name"></td>
+                <td id="priceUsd"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
+<script src="script.js"></script>
 </html>
+
+
