--- a/index.html
+++ b/index.html
@@ -3,8 +3,64 @@
 <head>
     <title>Cotação BTC</title>
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="./favicon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #282c34;
+            color: white;
+        }
+
+        .scene {
+            width: 200px;
+            height: 200px;
+            perspective: 600px;
+        }
+
+        .cube {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            transform-style: preserve-3d;
+            animation: rotate 5s infinite linear;
+        }
+
+        .face {
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            background-color: rgba(255, 255, 255, 0.9);
+            border: 2px solid #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        .face:nth-child(1) { transform: rotateY(0deg) translateZ(100px); }
+        .face:nth-child(2) { transform: rotateY(90deg) translateZ(100px); }
+        .face:nth-child(3) { transform: rotateY(180deg) translateZ(100px); }
+        .face:nth-child(4) { transform: rotateY(-90deg) translateZ(100px); }
+        .face:nth-child(5) { transform: rotateX(90deg) translateZ(100px); }
+        .face:nth-child(6) { transform: rotateX(-90deg) translateZ(100px); }
+
+        @keyframes rotate {
+            from {
+                transform: rotateX(0deg) rotateY(0deg);
+            }
+            to {
+                transform: rotateX(360deg) rotateY(360deg);
+            }
+        }
+    </style>
 </head>
 <body class="text-light bg-dark">
     <div class="container mt-3" style="width: 450px;">
@@ -25,7 +81,31 @@
             </tr>
             </tbody>
         </table>
+    <div class="scene" style="width: 450px;">
+        <div class="cube">
+            <div class="face">1</div>
+            <div class="face">2</div>
+            <div class="face">3</div>
+            <div class="face">4</div>
+            <div class="face">5</div>
+            <div class="face">6</div>
+        </div>
     </div>
+    </div>
+    <script>
+        // A animação é controlada via CSS, mas você pode manipular a velocidade e o ângulo via JavaScript se necessário
+        // Aqui está um exemplo de ajuste da velocidade com JavaScript (opcional)
+        const cube = document.querySelector('.cube');
+        let speed = 5000; // 5 segundos
+
+        function increaseSpeed() {
+            speed -= 1000;
+            if (speed < 1000) speed = 1000;
+            cube.style.animationDuration = `${speed}ms`;
+        }
+
+        setInterval(increaseSpeed, 5000);
+    </script>	
 </body>
 <script src="script.js"></script>
 </html>
